# beergame-

./: CMakeLists.txt  Game.cpp  Game.h  README.md  player.cpp  player.h
src/: CMakeLists.txt  Factory.h  Instructor.h
tests/: CMakeLists.txt  tests.cpp
